add 404 to swagger for employee not found
